new server deployment

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_HOST=sql8.freemysqlhosting.net
-DB_NAME=sql8742843
-DB_USER=sql8742843
-DB_PASSWORD=Xzps8r1ykc
+DB_NAME=sql8744279
+DB_USER=sql8744279
+DB_PASSWORD=79KWhhZt8H
 DB_PORT=3306
